@@ -73,24 +73,32 @@ except ImportError:
     _FREEZERS["cx_freeze"] = None
 
 
-class Executable(str):
+class Executable(unicode):
     """Class to hold information about a specific executable.
 
     This class provides a uniform way to specify extra meta-data about
     a frozen executable.  By setting various keyword arguments, you can
     specify e.g. the icon, and whether it is a gui-only script.
 
-    This is a subclass of str() so that it can appear directly in the
-    "scripts" argument of the setup() function; I know it's ugly, but
-    it works.
+    Some freezer modules require all items in the "scripts" argument to
+    be strings naming real files.  This is therefore a subclass of unicode,
+    and if it refers only to in-memory code then its string value will be
+    the path to this very file.  I know it's ugly, but it works.
     """
 
     def __new__(cls,script,**kwds):
-        return str.__new__(cls,script)
+        if not isinstance(script,basestring):
+            script = __file__
+        return unicode.__new__(cls,script)
 
     def __init__(self,script,name=None,icon=None,gui_only=None,
                       include_in_bootstrap_env=True,**kwds):
-        str.__init__(script)
+        if not isinstance(script,basestring):
+            if name is None:
+                raise TypeError("Must specify name if script is not a file")
+            unicode.__init__(__file__)
+        else:
+            unicode.__init__(script)
         self.script = script
         self.include_in_bootstrap_env = include_in_bootstrap_env
         self.icon = icon
@@ -313,12 +321,14 @@ class bdist_esky(Command):
         """Convert an object to some python source code.
 
         Iterables are flattened, None is elided, strings are included verbatim,
-        and anything else is passed to inspect.getsource().
+        open files are read and anything else is passed to inspect.getsource().
         """
         if obj is None:
             return ""
         if isinstance(obj,basestring):
             return obj
+        if hasattr(obj,"read"):
+            return obj.read()
         try:
             return "\n\n\n".join(self._obj2code(i) for i in obj)
         except TypeError:
@@ -339,22 +349,26 @@ class bdist_esky(Command):
                     bscode = getattr(bscode,submod)
         return self._obj2code(bscode)
 
-    def get_executables(self,rewrite=True):
+    def get_executables(self,normalise=True):
         """Yield a normalised Executable instance for each script to be frozen.
 
-        If "rewrite" is True (the default) then the user-provided scripts
-        will be rewritten to include the esky startup code.  If the freezer
-        has a better way of doing that, it should pass rewrite=False.
+        If "normalise" is True (the default) then the user-provided scripts
+        will be rewritten to decode any non-filename items specified as part
+        of the script, and to include the esky startup code.  If the freezer
+        has a better way of doing these things, it should pass normalise=False.
         """
-        if rewrite and not os.path.exists(os.path.join(self.tempdir,"scripts")):
-            os.mkdir(os.path.join(self.tempdir,"scripts"))
+        if normalise:
+            if not os.path.exists(os.path.join(self.tempdir,"scripts")):
+                os.mkdir(os.path.join(self.tempdir,"scripts"))
         if self.distribution.has_scripts():
             for s in self.distribution.scripts:
                 if isinstance(s,Executable):
                     exe = s
                 else:
                     exe = Executable(s)
-                if rewrite:
+                if normalise:
+                    #  Give the normalised script file a name matching that
+                    #  specified, since some freezers only take the filename.
                     name = exe.name
                     if sys.platform == "win32" and name.endswith(".exe"):
                         name = name[:-4]
@@ -363,21 +377,34 @@ class bdist_esky(Command):
                     else:
                         ext = ""
                     script = os.path.join(self.tempdir,"scripts",name+ext)
-                    with open(exe.script,"rt") as fIn:
-                        with open(script,"wt") as fOut:
-                            for ln in fIn:
-                                if ln.strip():
-                                    if not ln.strip().startswith("#"):
-                                        if "__future__" not in ln:
-                                            break
-                                fOut.write(ln)
-                            if not self.dont_run_startup_hooks:
-                                fOut.write("import esky\n")
-                                fOut.write("esky.run_startup_hooks()\n")
-                                fOut.write("\n")
+                    #  Get the code for the target script.
+                    #  If it's a single string then interpret it as a filename,
+                    #  otherwise feed it into the _obj2code logic.
+                    if isinstance(exe.script,basestring):
+                        with open(exe.script,"rt") as f:
+                            code = f.read()
+                    else:
+                        code = self._obj2code(exe.script)
+                    #  Augment the given code with special esky-related logic.
+                    with open(script,"wt") as fOut:
+                        lines = (ln+"\n" for ln in code.split("\n"))
+                        #  Keep any leading comments and __future__ imports
+                        #  at the start of the file.
+                        for ln in lines:
+                            if ln.strip():
+                                if not ln.strip().startswith("#"):
+                                    if "__future__" not in ln:
+                                        break
                             fOut.write(ln)
-                            for ln in fIn:
-                                fOut.write(ln)
+                        #  Run the startup hooks before any actual code.
+                        if not self.dont_run_startup_hooks:
+                            fOut.write("import esky\n")
+                            fOut.write("esky.run_startup_hooks()\n")
+                            fOut.write("\n")
+                        #  Then just include the rest of the script code.
+                        fOut.write(ln)
+                        for ln in lines:
+                            fOut.write(ln)
                     new_exe = Executable(script)
                     new_exe.__dict__.update(exe.__dict__)
                     new_exe.script = script
